# license-plate-detection

./: .gitignore  01_exploratory_data_analyis_EDA.ipynb  01_model_training.ipynb  02_model_training.ipynb  03_model_evaluation.ipynb  C3W2_Assignment.ipynb  Dockerfile  main.py  pyproject.toml  readme.md  results.data
.devcontainer/: devcontainer.json
conf/: config.yaml
utils/: annotation_processor.py  bounding_box_funcs.py  prepare_dataset.py  visualization_funcs.py
