[project]
name = "license-plate-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "roboflow>=1.1.54",
    "scipy>=1.15.1",
    "tensorflow==2.15.*",
    "tensorflow-datasets>=4.9.7",
    "tensorflow-hub>=0.16.1",
    "tensorflow-io>=0.37.1",
    "tensorflow[and-cuda]>=2.15.*",
    "tf-models-official>=2.15.0",
    "tf-slim>=1.1.0",
    "tqdm>=4.67.1",
]
